some bugs fixed

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -15,8 +15,8 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDiZj2nPVy-abSXPB63aT1QVFk5BAFAQgM&libraries=drawing,places,geometry,visualization,distance"></script> -->
-  <!-- <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDiZj2nPVy-abSXPB63aT1QVFk5BAFAQgM&libraries=drawing,places,geometry,visualization,distance'></script> -->
-  <!-- <script src="https://js.stripe.com/v3/"></script> -->
+  <script src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDiZj2nPVy-abSXPB63aT1QVFk5BAFAQgM&libraries=drawing,places,geometry,visualization,distance'></script>
+  <script src="https://js.stripe.com/v3/"></script>
 
   <style>
     #map {
